--- a/Pets-Info.plist
+++ b/Pets-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string></string>
+	<string>beepscoreIcon</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.beepscore.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
